# MattressEngine

./: CMakeLists.txt  third_party_licenses.txt
engine/: CMakeLists.txt
engine/include/: Engine.h  SystemBase.h
engine/include/components/: registerComponent.h
engine/include/components/audio/: AudioEngine.h
engine/include/components/core/: Game.h  Input.h  Transform.h  Window.h
engine/include/components/meta/: Cursor.h
engine/include/components/rendering/: Animator.h  Camera.h  Sprite.h
engine/include/resources/: BufferObject.h  SpriteBatch.h
engine/src/: ECS.h  ECSWorld.h  Engine.cpp  SparseSet.h
engine/src/resources/: RenderContext.cpp  ResourceManager.cpp  ResourceManager.h  SpriteBatch.cpp
engine/src/resources/renderer/: BufferObject.cpp  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite2D.cpp  Sprite2D.h  Texture2D.cpp  Texture2D.h  VertexArrayObject.cpp
engine/src/resources/sound/: Sound.cpp  Sound.h
engine/src/systems/: SystemManager.cpp
engine/src/systems/input/: InputSystem.cpp  InputSystem.h
engine/src/systems/rendering/: AnimatorSystem.cpp  AnimatorSystem.h  RenderSystem.cpp  RenderSystem.h
include/res/: RenderContext.h  SpriteBatch.h
res/: components.json  resources.json
res/shaders/: UIvertexShader2D.txt  fragmentShader2D.txt  vertexShader2D.txt
src/: main.cpp
src/game/: Game.cpp  Game.h  gameConstants.h
src/game/game_objects/: Button.cpp  Button.h  GameObject.cpp  GameObject.h
src/game/game_states/: GamePlay.cpp  GamePlay.h  GameState.h  StartScreen.cpp  StartScreen.h
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/renderer/: BufferObject.cpp  BufferObject.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite2D.cpp  Sprite2D.h  Sprite2DAnimator.cpp  Sprite2DAnimator.h  Texture2D.cpp  Texture2D.h  VertexArrayObject.cpp  VertexArrayObject.h
src/res/: RenderContext.cpp
src/resources/: ResourceManager.cpp  ResourceManager.h
src/sound/: Sound.cpp  Sound.h
src/system/: Soloptr.cpp  Soloptr.h  String.cpp  String.h  Timer.cpp  Timer.h  init.cpp  init.h  pair.h
